public/css/global.css
/* ... */
/* line 115, ../sass/global.sass */
.app--tweet--post textarea {
  padding-right: 60px;
}
/* line 117, ../sass/global.sass */
.app--tweet--char {
  position: absolute;
  right: 30px;
  bottom: 12px;
  color: #ccc;
  font-size: 1.8rem;
}
/* line 123, ../sass/global.sass */
.over-tweeted .app--tweet--char {
  color: #ed5a5a;
}
/* line 131, ../sass/global.sass */
.app--tweet--list, .app--user--list {
  list-style: none;
  padding-bottom: 195px;
}
/* line 134, ../sass/global.sass */
.app--tweet--list > li, .app--user--list > li {
  padding: 20px 20px 20px 90px;
  border-bottom: 1px solid #e1e1e1;
  margin: 0;
}
/* line 2, ../sass/circle/core/_mixins.sass */
.app--tweet--list > li:before, .app--tweet--list > li:after, .app--user--list > li:before, .app--user--list > li:after {
  content: " ";
  display: table;
}
/* line 5, ../sass/circle/core/_mixins.sass */
.app--tweet--list > li:after, .app--user--list > li:after {
  clear: both;
}
/* line 139, ../sass/global.sass */
.app--tweet--list p, .app--user--list p {
  font-size: 1.8rem;
  margin: 0 0 5px;
  line-height: 1.4;
}
/* line 144, ../sass/global.sass */
.app--tweet--timestamp, .app--user--timestamp {
  float: right;
  color: #ccc;
}
/* line 148, ../sass/global.sass */
.app--tweet--author, .app--user--author {
  color: #7dc9f8;
  display: block;
}
/* line 151, ../sass/global.sass */
.app--tweet--author:hover, .app--user--author:hover {
  color: #1da1f2;
}
/* line 153, ../sass/global.sass */
.app--tweet--author h4, .app--user--author h4 {
  display: inline;
  font-size: 1.8rem;
}
/* line 156, ../sass/global.sass */
.app--tweet--author p, .app--user--author p {
  margin: 0;
  font-size: 1.6rem;
}
/* line 160, ../sass/global.sass */
.app--tweet--actions, .app--user--actions {
  margin-bottom: -5px;
}
/* line 162, ../sass/global.sass */
.app--tweet--actions li, .app--user--actions li {
  margin: 0;
}
/* line 164, ../sass/global.sass */
.app--tweet--actions a, .app--user--actions a {
  color: #7dc9f8;
  position: relative;
  cursor: pointer;
}
/* line 168, ../sass/global.sass */
.app--tweet--actions a:hover, .app--user--actions a:hover {
  color: #1da1f2;
}
/* line 170, ../sass/global.sass */
.app--tweet--actions a:hover svg, .app--user--actions a:hover svg {
  fill: #1da1f2;
}
/* line 172, ../sass/global.sass */
.app--tweet--actions a:hover .tooltip, .app--user--actions a:hover .tooltip {
  bottom: 105%;
  opacity: 1;
}
/* line 175, ../sass/global.sass */
.app--tweet--actions a svg, .app--user--actions a svg {
  height: 13px;
  width: auto;
  fill: #c6e7fc;
  position: relative;
  bottom: -1px;
  -webkit-transition: fill 0.2s;
  -moz-transition: fill 0.2s;
  -ms-transition: fill 0.2s;
  -o-transition: fill 0.2s;
  transition: fill 0.2s;
}
/* line 183, ../sass/global.sass */
.app--tweet--actions .tooltip, .app--user--actions .tooltip {
  opacity: 0;
  position: absolute;
  background: rgba(0, 0, 0, 0.8);
  border-radius: 4px;
  bottom: 85%;
  left: 50%;
  color: #fff;
  padding: 5px 10px;
  font-size: 1.4rem;
  -moz-transform: translateX(-50%);
  -o-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  -webkit-transform: translateX(-50%);
  transform: translateX(-50%);
  -webkit-transition: bottom 0.2s, opacity 0.2s;
  -moz-transition: bottom 0.2s, opacity 0.2s;
  -ms-transition: bottom 0.2s, opacity 0.2s;
  -o-transition: bottom 0.2s, opacity 0.2s;
  transition: bottom 0.2s, opacity 0.2s;
}
/* line 198, ../sass/global.sass */
.app--user--list > li {
  padding: 20px 5px 20px 75px;
}
/* line 200, ../sass/global.sass */
.app--user--list .button-text {
  margin-right: -15px;
  color: #ccc;
}
/* line 203, ../sass/global.sass */
.app--user--list .button-text:hover {
  color: #a86cc6;
}
/* line 207, ../sass/global.sass */
.app--message--list, .app--message--conversation {
  list-style: none;
}
/* line 210, ../sass/global.sass */
.app--message--list .app--avatar, .app--message--conversation .app--avatar {
  position: absolute;
  bottom: 10px;
  margin: 0;
}
/* line 216, ../sass/global.sass */
.app--message--list > li {
  padding: 15px 20px;
  margin: 0;
  border-bottom: 4px solid #f1f1f1;
}
/* line 220, ../sass/global.sass */
.app--message--list h3 {
  font-weight: normal;
  font-size: 1.4rem;
  color: #ccc;
}
/* line 225, ../sass/global.sass */
.app--message--conversation {
  margin: 0;
}
/* line 228, ../sass/global.sass */
.app--message--text {
  background: #a86cc6;
  color: #fff;
  padding: 5px 15px;
  border-radius: 20px;
  margin: 0 0 5px;
  text-align: left;
  display: inline-block;
  position: relative;
}
/* line 237, ../sass/global.sass */
.app--message--text:after {
  content: "";
  display: block;
  position: absolute;
  left: -8px;
  bottom: 0px;
  background: #a86cc6 url("../images/message-tail.svg") no-repeat;
  width: 16px;
  height: 20px;
}
/* line 247, ../sass/global.sass */
.app--message--timestamp {
  font-size: 1.2rem;
  color: #999;
  margin: 0;
}
/* line 252, ../sass/global.sass */
.app--message {
  padding: 0 0 10px;
  padding-left: 70px;
  position: relative;
}
/* line 256, ../sass/global.sass */
.app--message .app--avatar {
  left: 0;
}
/* line 258, ../sass/global.sass */
.app--message--me {
  padding: 0 0 10px;
  padding-right: 70px;
  text-align: right;
  position: relative;
}
/* line 263, ../sass/global.sass */
.app--message--me .app--avatar {
  right: 0;
}
/* line 265, ../sass/global.sass */
.app--message--me .app--message--text {
  background: #1da1f2;
}
/* line 267, ../sass/global.sass */
.app--message--me .app--message--text:after {
  background: #1da1f2 url("../images/message-tail-me.svg") no-repeat;
  left: auto;
  right: -8px;
}

/* line 272, ../sass/global.sass */
.button,
button,
input[type="submit"],
input[type="reset"],
input[type="button"] {
  padding: 16px 20px;
}

